backported code & switched to Mojang mappings