@@ -10,9 +10,7 @@ import meteordevelopment.meteorclient.systems.modules.Module;
 import meteordevelopment.meteorclient.utils.render.color.Color;
 import meteordevelopment.meteorclient.utils.render.color.SettingColor;
 import meteordevelopment.orbit.EventHandler;
-import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.option.Perspective;
-
+import net.minecraft.client.CameraType;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Deque;
@@ -407,20 +405,19 @@ public class ChinaHat extends Module {
 
     @EventHandler
     private void onRender3D(Render3DEvent event) {
-        MinecraftClient mc = MinecraftClient.getInstance();
         if (mc.player == null) return;
-        if (mc.options.getPerspective() == Perspective.FIRST_PERSON) return;
+        if (mc.options.getCameraType() == CameraType.FIRST_PERSON) return;
 
         long now = System.currentTimeMillis();
         if (startTime < 0) startTime = now;
         double elapsed = (now - startTime) / 1000.0;
 
-        double x = mc.player.lastRenderX + (mc.player.getX() - mc.player.lastRenderX) * event.tickDelta;
-        double y = mc.player.lastRenderY + (mc.player.getY() - mc.player.lastRenderY) * event.tickDelta + mc.player.getHeight() + yOffsetSetting.get();
-        double z = mc.player.lastRenderZ + (mc.player.getZ() - mc.player.lastRenderZ) * event.tickDelta;
-        double bodyY = mc.player.lastRenderY + (mc.player.getY() - mc.player.lastRenderY) * event.tickDelta;
-        double headY = bodyY + mc.player.getHeight();
-        double headYaw = Math.toRadians(mc.player.getHeadYaw());
+        double x = mc.player.xOld + (mc.player.getX() - mc.player.xOld) * event.tickDelta;
+        double y = mc.player.yOld + (mc.player.getY() - mc.player.yOld) * event.tickDelta + mc.player.getBbHeight() + yOffsetSetting.get();
+        double z = mc.player.zOld + (mc.player.getZ() - mc.player.zOld) * event.tickDelta;
+        double bodyY = mc.player.yOld + (mc.player.getY() - mc.player.yOld) * event.tickDelta;
+        double headY = bodyY + mc.player.getBbHeight();
+        double headYaw = Math.toRadians(mc.player.getYHeadRot());
 
         float coneRadius = coneRadiusSetting.get().floatValue();
         float coneHeight = coneHeightSetting.get().floatValue();
@@ -465,7 +462,7 @@ public class ChinaHat extends Module {
                     if (frame.alpha <= 0) { fit.remove(); continue; }
                     float ageFraction = (float) frameIndex / Math.max(1, totalFrames - 1);
                     int alpha = (int)(frame.alpha * (1.0f - ageFraction * 0.7f) * 180);
-                    alpha = Math.max(0, Math.min(255, alpha));
+                    alpha = Math.clamp(alpha, 0, 255);
                     Color ghostColor;
                     if (afterimageRainbow.get()) {
                         float hue = afterimageRainbowSync.get()
@@ -510,10 +507,10 @@ public class ChinaHat extends Module {
                 Iterator<StarParticle> it = activeParticles.iterator();
                 while (it.hasNext()) {
                     StarParticle p = it.next();
-                    p.life -= (float)(event.tickDelta * 0.016f);
+                    p.life -= event.tickDelta * 0.016f;
                     if (p.life <= 0) { it.remove(); continue; }
                     p.px += p.vx; p.py += p.vy; p.pz += p.vz;
-                    p.rotation += rotSpeed;
+                    p.rotation += (float) rotSpeed;
 
                     if (p.vx == 0 && p.vy == 0 && p.vz == 0) {
                         double spawnAngle = random.nextDouble() * Math.PI * 2;
@@ -529,7 +526,7 @@ public class ChinaHat extends Module {
 
                     float lifeFraction = p.life / p.maxLife;
                     int alpha = particleFade.get() ? (int)(lifeFraction * 220) : 220;
-                    alpha = Math.max(0, Math.min(255, alpha));
+                    alpha = Math.clamp(alpha, 0, 255);
                     float size = particleShrink.get() ? ps * lifeFraction : ps;
 
                     Color pc;
@@ -603,7 +600,7 @@ public class ChinaHat extends Module {
                     if (frame.alpha <= 0) { fit.remove(); continue; }
                     float ageFraction = (float) frameIndex / Math.max(1, totalFrames - 1);
                     int alpha = (int)(frame.alpha * (1.0f - ageFraction * 0.7f) * 180);
-                    alpha = Math.max(0, Math.min(255, alpha));
+                    alpha = Math.clamp(alpha, 0, 255);
                     Color ghostColor;
                     if (afterimageRainbow.get()) {
                         float hue = afterimageRainbowSync.get()
